# gamen-hs

./: .ghci  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  gamen.cabal
.github/workflows/: ci.yml  docs.yml
app/: Main.hs
examples/: DeonticStit.hs  MensRea.hs  Tableau.hs
notebooks/: 00-propositional-logic.md  01-kripke.md  02-frame-definability.md  03-axiomatic-derivations.md  04-completeness.md  05-filtrations.md  06-tableaux.md  14-temporal-logics.md  15-epistemic-logics.md  16-deontic-stit.md  17-doxastic.md  18-ranking-theory.md  19-stit.md  20-laca.md  21-xstit.md  22-dcleg.md  Gemfile  Makefile  README.md  _config.yml  build.py  index.md
notebooks/_includes/: marginnote.html  sidenote.html
notebooks/_layouts/: notebook.html
notebooks/assets/css/: notebook.css
notebooks/health/: 00-clinical-rules.md  01-clinical-obligations.md  02-guideline-properties.md  03-deontic-systems.md  04-completeness.md  05-decidability.md  06-conflict-detection.md  14-temporal-clinical.md  15-epistemic-clinical.md  16-guideline-conflicts.md  17-doxastic-clinical.md  18-ranking-theory-clinical.md  19-stit-clinical.md  20-laca-clinical.md  21-xstit-clinical.md  22-dcleg-clinical.md
notes/: DCLEGComms.tex  DCLEGv5.tex  deontic-stit-gap-analysis.md  deontic-stit-implementation-log.md  haskell-landscape.md  human-validation-guide.md  julia_vs_haskell_comparison.md  notebook-calibration-ch1.md  ranking-theory.md  research_ideas_fp_adherence.md  stit-logics-review.md  tableau_blocking.md  tableau_optimization.md  validation-plan.md
src/Gamen/: Dcleg.hs  DeonticStit.hs  Doxastic.hs  Epistemic.hs  Formula.hs  FrameProperties.hs  Kripke.hs  Laca.hs  RankingTheory.hs  Semantics.hs  Stit.hs  Tableau.hs  Temporal.hs  Visualize.hs  Xstit.hs
src/Gamen/DeonticStit/: CounterModel.hs  Prove.hs  Rules.hs  Saturation.hs  Sequent.hs
test/: Main.hs  PaperCorrespondence.hs  Properties.hs
validate/: Main.hs
whitepaper/: gamen-hs-whitepaper-v2.md  gamen-hs-whitepaper.md  references.bib
