cabal-version:   3.0
name:            gamen
version:         0.1.0.0
synopsis:        Modal logic and game-theoretic reasoning
description:
  Haskell implementation of modal logic with Kripke semantics,
  tableau proving, and deontic-temporal reasoning.
  Ported from Gamen.jl. Named from Old English /gamen/ (game, sport, joy).

license:         MIT
author:          Brian Chapman, Jeremiah Chapman
build-type:      Simple

library
  exposed-modules:
    Gamen.Dcleg
    Gamen.DeonticStit
    Gamen.DeonticStit.CounterModel
    Gamen.DeonticStit.Prove
    Gamen.DeonticStit.Rules
    Gamen.DeonticStit.Saturation
    Gamen.DeonticStit.Sequent
    Gamen.Doxastic
    Gamen.Epistemic
    Gamen.Formula
    Gamen.FrameProperties
    Gamen.Kripke
    Gamen.Laca
    Gamen.RankingTheory
    Gamen.Semantics
    Gamen.Stit
    Gamen.Tableau
    Gamen.Temporal
    Gamen.Visualize
    Gamen.Xstit
  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wincomplete-patterns
  build-depends:
    base >= 4.17 && < 5,
    containers >= 0.6

test-suite gamen-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    PaperCorrespondence, Properties
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    containers >= 0.6,
    gamen,
    hspec >= 2.10,
    QuickCheck >= 2.14

executable gamen-repl
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    containers >= 0.6,
    gamen

executable example-tableau
  main-is:          Tableau.hs
  hs-source-dirs:   examples
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    gamen

executable example-deontic-stit
  main-is:          DeonticStit.hs
  hs-source-dirs:   examples
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    containers >= 0.6,
    gamen

executable example-mens-rea
  main-is:          MensRea.hs
  hs-source-dirs:   examples
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    gamen

executable gamen-validate
  main-is:          Main.hs
  hs-source-dirs:   validate
  default-language: GHC2021
  build-depends:
    base >= 4.17 && < 5,
    aeson >= 2.1,
    bytestring >= 0.11,
    containers >= 0.6,
    text >= 2.0,
    gamen
